apps/nexus/nexus-argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-argocd
  namespace: nexus
  labels:
    app: nexus-argocd
spec:
  selector:
    app: nexus-argocd
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: actuator
      port: 8081
      targetPort: 8081
